--- a/99.Final_version/Dockerfile.x86_cpu
+++ b/99.Final_version/Dockerfile.x86_cpu
@@ -7,7 +7,5 @@ RUN set -xe; \
   apt install -y libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libgstreamer-plugins-bad1.0-dev gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly gstreamer1.0-libav gstreamer1.0-tools gstreamer1.0-x gstreamer1.0-alsa gstreamer1.0-gl gstreamer1.0-gtk3 gstreamer1.0-qt5 gstreamer1.0-pulseaudio
 
 WORKDIR /home
-COPY test_opencv_gst_cpu.py ./
-
-WORKDIR /home
+COPY test_opencv_gst_cpu.py testRTSP.py ./
 COPY main /home/main
